# hello_cmake

./: CMakeLists.txt  Compilar_tool.docx  README.md  additional_cmake_doc.md  cmake-addsubdirectory.md  library_linking_errors.md
include/: utils.h
src/: helper.cpp  image_view.cpp  main.cpp  utils.cpp
